@@ -51,6 +51,7 @@ export class AppComponent {
   @HostListener('window:resize')
   onResize() {
     this.screenService.isMobileSize.next(isPlatformBrowser(this.platformId) ? window.innerWidth < 992 : false);
+    this.screenService.isMobileDevice.next(this.screenService.isMobileDeviceFunc());
   }
   scrollTo() {
     window.scrollTo(0, 0);
